<resources>
    <string name="app_name">Devansh\'s app</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Happy birthday Kaanu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Birthday App for Devansh</string>
    <string name="nav_header_subtitle">dnmeal@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="VideoOne">Video One</string>
    <string name="VideoTwo">Video Two</string>
    <string name="VideoThree">Video Three</string>
    <string name="VideoFour">Video Four</string>
    <string name="VideoFive">Video Five</string>
    <string name="About">About</string>
    <string name="title_activity_firstvideo">firstvideo</string>
    <string name="title_activity_about_activity">About_activity</string>
    <string name="About_text">This is the biggest app designed by Lokendra so far. This app is specially designed for the birthday of Devansh. This is a special kind of birthday wisher to Devansh from his uncle Lokendra.</string>
    <string name="title_activity_secondvideo">secondvideo</string>
    <string name="title_activity_thirdvideo">thirdvideo</string>
    <string name="title_activity_fourthvideo">fourthvideo</string>
    <string name="title_activity_fifthvideo">fifthvideo</string>
</resources>
